--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       "image": "https://riflexcentar.rs/images/logo.png",
       "url": "https://riflexcentar.rs",
       "telephone": "+381123456789",
-      "email": "ivan.tasin@gmail.com",
+      "email": "r.ignjatov@gmail.com",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Preradovićeva 183",
@@ -98,7 +98,7 @@
       "priceRange": "$",
       "sameAs": [
         "https://www.facebook.com/riflexcentar",
-        "https://www.instagram.com/riflexcentar"
+        "https://www.instagram.com/riflexcentar/"
       ],
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
@@ -191,7 +191,7 @@
       "description": "Profesionalni centar za fizioterapiju, masažu i wellness u Petrovaradinu. Nudimo Mulligan metodu, maderoterapija, terapeutske i sportske masaže, presoterapiju i korektivnu gimnastiku.",
       "url": "https://riflexcentar.rs",
       "telephone": "+381123456789",
-      "email": "ivan.tasin@gmail.com",
+      "email": "r.ignjatov@gmail.com",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Preradovićeva 183",
@@ -728,6 +728,9 @@
             display: none;
         }
 
+        .social a { color:#6b8e7c; }          /* default */
+        .social a:hover { color:#3b5f4b; }    /* hover */
+
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2rem;
@@ -911,7 +914,7 @@
                         <div class="info-icon">✉️</div>
                         <div>
                             <strong>Email</strong><br>
-                            <a href="mailto:ivan.tasin@gmail.com" style="color: var(--dark); text-decoration: none;">ivan.tasin@gmail.com</a>
+                            <a href="mailto:r.ignjatov@gmail.com" style="color: var(--dark); text-decoration: none;">r.ignjatov@gmail.com</a>
                         </div>
                     </div>
                     <div class="map-container">
@@ -925,8 +928,13 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="https://instagram.com" target="_blank" title="Instagram">📷</a>
-                <a href="https://facebook.com" target="_blank" title="Facebook">📘</a>
+                <a href="https://www.instagram.com/riflexcentar/" target="_blank" title="Instagram"><svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill="currentColor" d="M7 2C4.24 2 2 4.24 2 7V17C2 19.76 4.24 22 7 22H17C19.76 22 22 19.76 22 17V7C22 4.24 19.76 2 17 2H7ZM12 7C14.76 7 17 9.24 17 12C17 14.76 14.76 17 12 17C9.24 17 7 14.76 7 12C7 9.24 9.24 7 12 7ZM18 6.5C18.55 6.5 19 6.05 19 5.5C19 4.95 18.55 4.5 18 4.5C17.45 4.5 17 4.95 17 5.5C17 6.05 17.45 6.5 18 6.5Z"/>
+                </svg></a>
+            <a href="https://www.facebook.com/radovan.ignjatov" target="_blank" aria-label="Facebook">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill="currentColor" d="M22 12C22 6.48 17.52 2 12 2C6.48 2 2 6.48 2 12C2 16.84 5.66 20.8 10.44 21.76V14.89H7.9V12H10.44V9.8C10.44 7.3 11.93 5.92 14.2 5.92C15.29 5.92 16.43 6.11 16.43 6.11V8.56H15.18C13.95 8.56 13.56 9.32 13.56 10.1V12H16.32L15.88 14.89H13.56V21.76C18.34 20.8 22 16.84 22 12Z"/>
+                </svg></a>
             </div>
             <p>&copy; 2025 Riflex Centar. <span class="translate" data-key="footer_rights">Sva prava zadržana.</span></p>
         </div>
@@ -1399,7 +1407,7 @@
 
             // fallback (samo ako EmailJS nije konfigurisan)
             const body = encodeURIComponent(`Ime: ${name}\r\nEmail: ${email}\r\nTelefon: ${phone}\r\n\r\nPoruka:\r\n${message}`);
-            window.location.href = `mailto:ivan.tasin@gmail.com?subject=${encodeURIComponent(subject || 'Poruka sa sajta')}&body=${body}`;
+            window.location.href = `mailto:r.ignjatov@gmail.com?subject=${encodeURIComponent(subject || 'Poruka sa sajta')}&body=${body}`;
         }
 
 
