--- a/src/index.html
+++ b/src/index.html
@@ -956,15 +956,15 @@
                                 </a>
 
                                 <!-- Viber -->
-                                <a href="viber://chat?number=381123456789"
-                                class="contact-app viber"
-                                aria-label="Chat on Viber">
-                                    <svg viewBox="0 0 32 32">
-                                        <path d="M16 3c7 0 13 4.9 13 11 0 6.1-6 11-13 11-1.8 0-3.5-.3-5-.8L3 29l3.5-7.3C5.2 20.2 4 17.7 4 14 4 7.9 9 3 16 3z"/>
-                                    </svg>
-                                    Viber
-                                </a>
-
+                                <a href="https://viber.com/en/contact?number=381123456789"
+                                    target="_blank"
+                                    class="contact-app viber"
+                                    aria-label="Chat on Viber">
+                                        <svg viewBox="0 0 32 32">
+                                            <path d="M16 3c7 0 13 4.9 13 11 0 6.1-6 11-13 11-1.8 0-3.5-.3-5-.8L3 29l3.5-7.3C5.2 20.2 4 17.7 4 14 4 7.9 9 3 16 3z"/>
+                                        </svg>
+                                        Viber
+                                    </a>
                             </div>
                         </div>
                     </div>
