sredjen izgled mobilni i desk za sertifikate i prevodi

--- a/src/index.html
+++ b/src/index.html
@@ -750,12 +750,19 @@
                 display: block;
             }
 
+            .about-text {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+            }
+
             .about-image {
                 float: none;
                 width: 100%;
                 height: auto;
                 margin-right: 0;
                 margin-bottom: 1rem;
+                flex-shrink: 0;
             }
 
             .nav-links {
@@ -876,7 +883,7 @@
                         Dugi niz godina posvećen je edukacijom i zdravim načinom života kojeg i bezuslovno prenosi.
                         Danas je vlasnik i idejni kreator centra RIFLEX, gde primenjuje znanje i praksu stečene kroz
                         dugogodišnji rad, brojne seminare i kontinuirano stručno usavršavanje. Smatra da proces
-                        učenja i profesionalnog razvoja nikada ne prestaje — naprotiv, tek počinje.
+                        učenja i profesionalnog razvoja nikada ne prestaje naprotiv, tek počinje.
                     </p>
                     
                     <div class="credentials">
@@ -1044,7 +1051,7 @@
             en: {
                 nav_home: "Home",
                 nav_about: "About Us",
-                nav_above_about: "I believe in an individual approach, patience, and consistent work. I have been engaged in rehabilitation, kinesiotherapy, and corrective gymnastics for over 15 years, with a clear goal to help each client regain functionality, confidence in movement, and quality of life, all accompanied by a smile. For me, limits do not exist; there is only the process. \"The impossible only requires a little more time — believe in yourself and a better tomorrow.",
+                nav_above_about: "I believe in an individual approach, patience, and consistent work. I have been engaged in rehabilitation, kinesiotherapy, and corrective gymnastics for over 15 years, with a clear goal to help each client regain functionality, confidence in movement, and quality of life, all accompanied by a smile. For me, limits do not exist; there is only the process. The impossible only requires a little more time believe in yourself and a better tomorrow.",
                 nav_services: "Services",
                 nav_contact: "Contact",
                 hero_title: "Welcome to Riflex Center",
@@ -1077,7 +1084,7 @@
             de: {
                 nav_home: "Startseite",
                 nav_about: "Über uns",
-                nav_above_about: "I believe in an individual approach, patience, and consistent work. I have been engaged in rehabilitation, kinesiotherapy, and corrective gymnastics for over 15 years, with a clear goal to help each client regain functionality, confidence in movement, and quality of life, all accompanied by a smile. For me, limits do not exist there is only the process. The impossible only requires a little more time — believe in yourself and a better tomorrow.",
+                nav_above_about: "Ich glaube an einen individuellen Ansatz, Geduld und konsequente Arbeit. Seit über 15 Jahren beschäftige ich mich mit Rehabilitation, Kinesiotherapie und korrigierender Gymnastik, mit dem klaren Ziel, jedem Klienten dabei zu helfen, Funktionalität, Vertrauen in die eigene Bewegung und Lebensqualität wiederzuerlangen stets begleitet von einem Lächeln. Für mich gibt es keine Grenzen, nur den Prozess. Das Unmögliche braucht lediglich etwas mehr Zeit glaube an dich selbst und an ein besseres Morgen.",
                 nav_services: "Dienstleistungen",
                 nav_contact: "Kontakt",
                 hero_title: "Willkommen im Riflex Center",
@@ -1110,7 +1117,7 @@
             ru: {
                 nav_home: "Главная",
                 nav_about: "О нас",
-                nav_above_about: "I believe in an individual approach, patience, and consistent work. I have been engaged in rehabilitation, kinesiotherapy, and corrective gymnastics for over 15 years, with a clear goal to help each client regain functionality, confidence in movement, and quality of life, all accompanied by a smile. For me, limits do not exist; there is only the process. \"The impossible only requires a little more time — believe in yourself and a better tomorrow.",
+                nav_above_about: "Я верю в индивидуальный подход, терпение и последовательную работу. Более 15 лет я занимаюсь реабилитацией, кинезиотерапией и коррекционной гимнастикой с чёткой целью помочь каждому клиенту восстановить функциональность, уверенность в движении и качество жизни, всегда с улыбкой. Для меня не существует границ — есть только процесс. Невозможное требует лишь немного больше времени верь в себя и в лучшее завтра.",
                 nav_services: "Услуги",
                 nav_contact: "Контакт",
                 hero_title: "Добро пожаловать в Riflex Center",
