Fix icon certificate

--- a/src/index.html
+++ b/src/index.html
@@ -492,7 +492,7 @@
         }
 
         .credentials-list li::before {
-            content: "✓";
+            content: "📜";
             color: white;
             background: var(--primary);
             width: 30px;
