fix naslova i sitnica facebook i instagram

--- a/src/index.html
+++ b/src/index.html
@@ -850,7 +850,7 @@
     <section class="hero" id="home" itemscope itemtype="https://schema.org/Organization">
         <div class="container">
             <h1 class="translate" data-key="hero_title" itemprop="name">Dobrodošli u Riflex Centar</h1>
-            <p class="translate" data-key="hero_subtitle" itemprop="description">Vaš put ka zdravlju, pokretljivosti i boljoj kvaliteti života</p>
+            <p class="translate" data-key="hero_subtitle" itemprop="description">Vaš put ka zdravlju, pokretljivosti i boljem kvalitetu života</p>
             <a href="#contact" class="cta-btn translate" data-key="hero_cta">Zakažite termin</a>
         </div>
     </section>
@@ -943,7 +943,7 @@
                                 </a>
 
                                 <!-- Viber -->
-                                <a href="https://viber.com/en/contact?number=381605658461"
+                                <a href="viber://chat?number=+381605658461"
                                     target="_blank"
                                     class="contact-app viber"
                                     aria-label="Chat on Viber">
@@ -970,7 +970,7 @@
                         </div>
                         <div>
                             <strong>Instagram</strong><br>
-                            <a href="https://www.instagram.com/riflexcentar/" target="_blank" style="color: var(--dark); text-decoration: none;">@riflexcentar</a>
+                            <a href="https://www.instagram.com/riflexcentar/" target="_blank" style="color: var(--dark); text-decoration: none;">@riflex-centar</a>
                         </div>
                     </div>
                     <div class="info-item">
@@ -981,7 +981,7 @@
                         </div>
                         <div>
                             <strong>Facebook</strong><br>
-                            <a href="https://www.facebook.com/groups/326859667394994/?ref=share_group_link#" target="_blank" style="color: var(--dark); text-decoration: none;">Radovan Ignjatov</a>
+                            <a href="https://www.facebook.com/groups/326859667394994/?ref=share_group_link#" target="_blank" style="color: var(--dark); text-decoration: none;">@riflex-centar</a>
                         </div>
                     </div>
                 </div>
@@ -1025,7 +1025,7 @@
                 about_title: "O nama",
                 about_name: "Ime Prezime",
                 about_title_profession: "Diplomirani fizioterapeut",
-                about_description: "Radovan Ignjatov (1986) je diplomirani specijalista korektivne gimnastike i kineziterapije sa više od 15 godina profesionalnog iskustva. Srednje obrazovanje završio je za fizioterapeuta, karijeru započeo u Domu zdravlja u oblasti fizikalne medicine i kineziterapije. Značajno kliničko iskustvo stekao je u Institutu za kardiovaskularne bolesti Sremska Kamenica, radeći u sektorima kardiologije i kardiohirurgije. Dodatno iskustvo obuhvata i rad u oblasti banjskog lečenja i rehabilitacije. Ključni deo profesionalnog razvoja vezan je za rad u Nemačkoj, gde je bio angažovan u specijalizovanom centru za postoperativni oporavak, neurorehabilitaciju i sportski oporavak, uz primenu savremenih rehabilitacionih i terapijskih protokola. Dugi niz godina posvećen je edukacijom i zdravim načinom života kojeg i bezuslovno prenosi. Danas je vlasnik i idejni kreator centra RIFLEX, gde primenjuje znanje i praksu stečene kroz dugogodišnji rad, brojne seminare i kontinuirano stručno usavršavanje. Smatra da proces učenja i profesionalnog razvoja nikada ne prestaje naprotiv, tek počinje.",
+                about_description: "Radovan Ignjatov (1986) je diplomirani specijalista korektivne gimnastike i kineziterapije sa više od 15 godina profesionalnog iskustva. Srednje obrazovanje završio je za fizioterapeuta, karijeru započeo u Domu zdravlja u oblasti fizikalne medicine i kineziterapije. Značajno kliničko iskustvo stekao je u Institutu za kardiovaskularne bolesti Sremska Kamenica, radeći u sektorima kardiologije i kardiohirurgije. Dodatno iskustvo obuhvata i rad u oblasti banjskog lečenja i rehabilitacije. Ključni deo profesionalnog razvoja vezan je za rad u Nemačkoj, gde je bio angažovan u specijalizovanom centru za postoperativni oporavak, neurorehabilitaciju i sportski oporavak, uz primenu savremenih rehabilitacionih i terapijskih protokola. Dugi niz godina posvećen je edukacijom i zdravim načinom života kojeg i bezuslovno prenosi. Danas je vlasnik i idejni kreator centra RIFLEX, gde primenjuje znanje i praksu stečene kroz dugogodišnji rad, brojne seminare i stručno usavršavanje. Smatra da proces učenja i profesionalnog razvoja nikada ne prestaje naprotiv, tek počinje.",
                 about_credentials: "Sertifikati i edukacije",
                 cert_mulligan: "Sertifikovani Mulligan praktičar - Level C",
                 cert_kinesio: "Kinesio Taping Association International (KTAI)",
@@ -1086,7 +1086,7 @@
                 nav_services: "Dienstleistungen",
                 nav_contact: "Kontakt",
                 hero_title: "Willkommen im Riflex Center",
-                hero_subtitle: "Ihr Weg zu Gesundheit, Mobilität und besserer Lebensqualität",
+                hero_subtitle: "Ihr Weg zu Gesundheit, mobilität und besserer Lebensqualität",
                 hero_cta: "Termin buchen",
                 about_title: "Über uns",
                 about_name: "Radovan Ignjatov",
