--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Opis vaše stranice u 150-160 karaktera"><title>Riflex Centar - Fizioterapija, Masaža i Wellness | Petrovaradin</title>
     <!-- Primary Meta Tags -->
     <title>Riflex Centar - Fizioterapija, Masaža i Wellness | Petrovaradin</title>
     <meta name="title" content="Riflex Centar - Fizioterapija, Masaža i Wellness | Petrovaradin">
@@ -869,7 +869,7 @@
                     <div class="about-image">
                         <img src="./radovan-ignjatov.jpg" alt="Fizioterapeut - Riflex Centar" id="therapistImage">
                     </div>
-                    <h3 class="translate" data-key="about_name">Radovan Ignajtov</h3>
+                    <h3 class="translate" data-key="about_name">Radovan Ignjatov</h3>
                     <h4 class="translate" data-key="about_title_profession">Diplomirani specijalista korektivne gimnastike i kineziterapije</h4>
                     <p class="translate" data-key="about_description">
                         Radovan Ignjatov (1986) je diplomirani specijalista korektivne gimnastike i kineziterapije sa više
@@ -883,7 +883,7 @@
                         oporavak, uz primenu savremenih rehabilitacionih i terapijskih protokola.
                         Dugi niz godina posvećen je edukacijom i zdravim načinom života kojeg i bezuslovno prenosi.
                         Danas je vlasnik i idejni kreator centra RIFLEX, gde primenjuje znanje i praksu stečene kroz
-                        dugogodišnji rad, brojne seminare i kontinuirano stručno usavršavanje. Smatra da proces
+                        dugogodišnji rad, brojne seminare i stručno usavršavanje. Smatra da proces
                         učenja i profesionalnog razvoja nikada ne prestaje naprotiv, tek počinje.
                     </p>
                     
@@ -894,8 +894,7 @@
                             <li><strong>Kinesio Taping:</strong> <span class="translate" data-key="cert_kinesio">Kinesio Taping Association International (KTAI)</span></li>
                             <li><strong>Stecco Fascia:</strong> <span class="translate" data-key="cert_fascia">Fascial Manipulation® Level I i II</span></li>
                             <li><strong>PNF:</strong> <span class="translate" data-key="cert_pnf">Proprioceptive Neuromuscular Facilitation</span></li>
-                            <li><strong>Sport:</strong> <span class="translate" data-key="cert_sport">Sportska rehabilitacija i fizioterapija</span></li>
-
+                            <li><strong>Sport:</strong> <span class="translate" data-key="cert_sport">Sportska rehabilitacija i oporavak</span></li>
                         </ul>
                     </div>
                 </div>
